force-app/main/default/objects/Payment_Milestone__c/Payment_Milestone__c.object-meta.xml
<CustomObject>
    <label>Payment</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Payment Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>