force-app/main/default/objects/Payment_Milestone__c/fields/Check_DD_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_DD_Number__c</fullName>
    <label>Check / DD Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>