force-app/main/default/objects/Payment_Milestone__c/fields/Interior_Design_Partner__c.field-meta.xml
<CustomField>
    <fullName>Interior_Design_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interior Design Partner</label>
    <referenceTo>Interior_Designer__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>