force-app/main/default/objects/Payment_Milestone__c/fields/Minimum_Agreeable_Amount_To_be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Agreeable_Amount_To_be_Paid__c</fullName>
    <formula>5 * 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Agreeable Amount To be Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>