force-app/main/default/objects/Payment_Milestone__c/fields/Order_Book_Month_del__c.field-meta.xml
<CustomField>
    <fullName>Order_Book_Month_del__c</fullName>
    <inlineHelpText>Please enter date of order confirmation</inlineHelpText>
    <label>Order Book Month</label>
    <type>Date</type>
</CustomField>