force-app/main/default/objects/Payment_Milestone__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
            <value>
                <fullName>NEFT/RTGS</fullName>
            </value>
            <value>
                <fullName>CC Avenue</fullName>
            </value>
            <value>
                <fullName>Paytm</fullName>
            </value>
            <value>
                <fullName>Kissht</fullName>
            </value>
            <value>
                <fullName>Card Swipe</fullName>
            </value>
            <value>
                <fullName>HDFC</fullName>
            </value>
            <value>
                <fullName>PayU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>