force-app/main/default/objects/Payment_Milestone__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Received</fullName>
                <default>true</default>
                <label>Payment Received</label>
            </value>
            <value>
                <fullName>Payment Approved</fullName>
            </value>
            <value>
                <fullName>Payment Rejected</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>