force-app/main/default/objects/Payment_Milestone__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installment 1</fullName>
            </value>
            <value>
                <fullName>Installment 2</fullName>
            </value>
            <value>
                <fullName>Installment 3</fullName>
            </value>
            <value>
                <fullName>Installment 4</fullName>
            </value>
            <value>
                <fullName>Final Installment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>