force-app/main/default/objects/Payment_Milestone__c/recordTypes/Payment_Approved_Recordtype.recordType-meta.xml
<RecordType>
    <fullName>Payment_Approved_Recordtype</fullName>
    <active>true</active>
    <label>Payment Approved Recordtype</label>
</RecordType>