force-app/main/default/objects/Payment_Milestone__c/recordTypes/Payment_Received_Record_type.recordType-meta.xml
<RecordType>
    <fullName>Payment_Received_Record_type</fullName>
    <active>true</active>
    <label>Payment Received Record type</label>
</RecordType>