force-app/main/default/objects/Payment_Milestone__c/validationRules/Future_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_date_validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF(  DATEVALUE(Payment_Date__c  ) &gt;  Today(), true, false)</errorConditionFormula>
    <errorDisplayField>Payment_Date__c</errorDisplayField>
    <errorMessage>The date should be today or in the past, not in the future</errorMessage>
</ValidationRule>