force-app/main/default/objects/Payment_Milestone__c/validationRules/Payment_pk_value_should_be_pymnt_receivd.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_pk_value_should_be_pymnt_receivd</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Payment_Status__c , &quot;Payment Received&quot;)),$Profile.Name = &apos;Design Partner Profile&apos;)</errorConditionFormula>
    <errorDisplayField>Payment_Status__c</errorDisplayField>
    <errorMessage>Picklist value should be Payment Received.</errorMessage>
</ValidationRule>