force-app/main/default/objects/Payment_Milestone__c/validationRules/Payment_Type_Cannot_be_NULL.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Type_Cannot_be_NULL</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( ISBLANK( Amount_Received__c ) ), 
ISPICKVAL(Payment_Type__c, &apos;&apos;) )</errorConditionFormula>
    <errorDisplayField>Payment_Type__c</errorDisplayField>
    <errorMessage>Payment Type Cannot be EMPTY when Amount is Received</errorMessage>
</ValidationRule>