force-app/main/default/objects/Payment_Milestone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount_Received__c</columns>
    <columns>Bill__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Payment_Mode__c</columns>
    <columns>Design_Partner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Design_Partner__c</field>
        <operation>equals</operation>
        <value>Mohini</value>
    </filters>
    <label>All</label>
</ListView>