force-app/main/default/objects/Payment_Milestone__c/listViews/Pending_Payments.listView-meta.xml
<ListView>
    <fullName>Pending_Payments</fullName>
    <columns>NAME</columns>
    <columns>Amount_Received__c</columns>
    <columns>Design_Partner__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>Payment_Mode__c</columns>
    <columns>Payment_Approved_By_Finance__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Payment Received</value>
    </filters>
    <label>Pending Payments</label>
</ListView>